add application project

--- a/Winecellar.Api/Winecellar.Api.csproj
+++ b/Winecellar.Api/Winecellar.Api.csproj
@@ -11,4 +11,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DependencyInjection\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Winecellar.Application\Winecellar.Application.csproj" />
+  </ItemGroup>
+
 </Project>
