--- a/Winecellar.Api/Winecellar.Api.csproj
+++ b/Winecellar.Api/Winecellar.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Winecellar.Application\Winecellar.Application.csproj" />
+    <ProjectReference Include="..\Winecellar.Domain\Winecellar.Domain.csproj" />
+    <ProjectReference Include="..\Winecellar.Infrastructure\Winecellar.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middleware\" />
   </ItemGroup>
 
 </Project>
