--- a/Winecellar.Api/Properties/appsettings.json
+++ b/Winecellar.Api/Properties/appsettings.json
@@ -9,5 +9,25 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }//,
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "Logs/applog-.txt",
+      //    "rollingInterval": "Day"
+      //  }
+      //}
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Winecellar"
+    }
   }
 }
