add connection to postgres

--- a/Winecellar.Infrastructure/Winecellar.Infrastructure.csproj
+++ b/Winecellar.Infrastructure/Winecellar.Infrastructure.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Winecellar.Domain\Winecellar.Domain.csproj" />
+    <ProjectReference Include="..\Winecellar.Application\Winecellar.Application.csproj" />
   </ItemGroup>
 
 </Project>
