--- a/Winecellar.Application/Winecellar.Application.csproj
+++ b/Winecellar.Application/Winecellar.Application.csproj
@@ -7,17 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
     <Folder Include="Dtos\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Winecellar.Domain\Winecellar.Domain.csproj" />
-    <ProjectReference Include="..\Winecellar.Infrastructure\Winecellar.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
