add authentication configuration

--- a/Winecellar.Api/Properties/appsettings.json
+++ b/Winecellar.Api/Properties/appsettings.json
@@ -13,6 +13,11 @@
     "ConnectionStrings": {
         "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=majah;Password=password"
     },
+    "TokenConfig": {
+        "SecretKey": "",
+        "Issuer": "",
+        "Audience": ""
+    },
     "Serilog": {
         "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
         "MinimumLevel": "Debug",
