--- a/Winecellar.Api/Properties/appsettings.Development.json
+++ b/Winecellar.Api/Properties/appsettings.Development.json
@@ -4,5 +4,33 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=majah;Password=password"
+  },
+  "TokenConfig": {
+    "SecretKey": "SecretKey",
+    "Issuer": "TestIssuer",
+    "Audience": "TestAudience"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      } //,
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "Logs/applog-.txt",
+      //    "rollingInterval": "Day"
+      //  }
+      //}
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Winecellar"
+    }
   }
 }
