--- a/Winecellar.Api/Properties/appsettings.json
+++ b/Winecellar.Api/Properties/appsettings.json
@@ -1,41 +1,36 @@
 {
-    "profiles": {
-        "https": {
-            "commandName": "Project",
-            "dotnetRunMessages": true,
-            "launchBrowser": false,
-            "applicationUrl": "https://localhost:5001;http://localhost:5000",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        }
-    },
-    "ConnectionStrings": {
-        "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=majah;Password=password"
-    },
-    "TokenConfig": {
-        "SecretKey": "",
-        "Issuer": "",
-        "Audience": ""
-    },
-    "Serilog": {
-        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-        "MinimumLevel": "Debug",
-        "WriteTo": [
-            {
-                "Name": "Console"
-            } //,
-            //{
-            //  "Name": "File",
-            //  "Args": {
-            //    "path": "Logs/applog-.txt",
-            //    "rollingInterval": "Day"
-            //  }
-            //}
-        ],
-        "Enrich": [ "FromLogContext", "WithMachineName" ],
-        "Properties": {
-            "ApplicationName": "Winecellar"
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbConnectionString": ""
+  },
+  "TokenConfig": {
+    "SecretKey": "",
+    "Issuer": "",
+    "Audience": ""
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      } //,
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "Logs/applog-.txt",
+      //    "rollingInterval": "Day"
+      //  }
+      //}
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Winecellar"
+    }
+  }
 }
