--- a/Winecellar.Api/Properties/appsettings.Development.json
+++ b/Winecellar.Api/Properties/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=majah;Password=password"
+    "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=postgres;Password=password"
   },
   "TokenConfig": {
     "SecretKey": "SecretKey",
@@ -14,19 +14,12 @@
     "Audience": "TestAudience"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console"],
     "MinimumLevel": "Debug",
     "WriteTo": [
       {
         "Name": "Console"
-      } //,
-      //{
-      //  "Name": "File",
-      //  "Args": {
-      //    "path": "Logs/applog-.txt",
-      //    "rollingInterval": "Day"
-      //  }
-      //}
+      }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName" ],
     "Properties": {
