--- a/Winecellar.Api/Winecellar.Api.csproj
+++ b/Winecellar.Api/Winecellar.Api.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Winecellar.Infrastructure\Winecellar.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DependencyInjection\" />
+  </ItemGroup>
+
 </Project>
