add create wine test

--- a/Winecellar.Test/Winecellar.Test.csproj
+++ b/Winecellar.Test/Winecellar.Test.csproj
@@ -26,4 +26,9 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
