--- a/Winecellar.Api/Properties/appsettings.Development.json
+++ b/Winecellar.Api/Properties/appsettings.Development.json
@@ -11,7 +11,8 @@
   "TokenConfig": {
     "SecretKey": "SecretKey",
     "Issuer": "TestIssuer",
-    "Audience": "TestAudience"
+    "Audience": "TestAudience",
+    "AccessTokenExpiration": 3600
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console"],
