--- a/Winecellar.Api/Properties/appsettings.Development.json
+++ b/Winecellar.Api/Properties/appsettings.Development.json
@@ -12,7 +12,9 @@
     "SecretKey": "SecretKey",
     "Issuer": "TestIssuer",
     "Audience": "TestAudience",
-    "AccessTokenExpiration": 3600
+    "AccessTokenExpiration": 3600,
+    "RefreshTokenExpiration": 7776000,
+    "ResetPasswordTokenExpiration": 1800
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console"],
