--- a/Winecellar.Api/Properties/appsettings.json
+++ b/Winecellar.Api/Properties/appsettings.json
@@ -11,7 +11,10 @@
   "TokenConfig": {
     "SecretKey": "",
     "Issuer": "",
-    "Audience": ""
+    "Audience": "",
+    "AccessTokenExpiration": 3600,
+    "RefreshTokenExpiration": 7776000,
+    "ResetPasswordTokenExpiration": 1800
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
