add functionality to store refresh token

--- a/Winecellar.Api/Properties/appsettings.Development.json
+++ b/Winecellar.Api/Properties/appsettings.Development.json
@@ -9,7 +9,7 @@
     "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=postgres;Password=password"
   },
   "TokenConfig": {
-    "SecretKey": "SecretKey",
+    "SecretKey": "SecretKeySecretKeySecretKeySecretKeySecretKey",
     "Issuer": "TestIssuer",
     "Audience": "TestAudience",
     "AccessTokenExpiration": 3600,
