--- a/Winecellar.Api/Properties/appsettings.Development.json
+++ b/Winecellar.Api/Properties/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=postgres;Password=password"
+    "DbConnectionString": "Host=localhost;Port=5432;Database=winecellardb;Username=postgres;Password=password",
+    "TestDbConnectionString": "Host=localhost;Port=5432;Database=winecellartestdb;Username=postgres;Password=password"
   },
   "TokenConfig": {
     "SecretKey": "SecretKeySecretKeySecretKeySecretKeySecretKey",
